--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#portpolio">Portpolio</a></li>
         <li><a href="#member">Member</a></li>
-        <li><a href="#">새소식</a></li>
+        <li><a href="#link">Link</a></li>
       </ul>
     </nav>
     <div class="container">
@@ -42,7 +42,8 @@
       </div>
     </div>
     <div class="member-content" id="member">
-      <h1>Member</h1>
+      <h1>My Team</h1>
+      <button id="team_page">Team Page</button>
       <div class="member_container">
         <div class="card">
           <a href="https://webjk080200.netlify.app/">
@@ -81,6 +82,45 @@
             <div class="card-head">이름 : 전성배</div>
             <div class="card-footer">학번 : 92451097</div>
           </a>
+        </div>
+      </div>
+    </div>
+    <div class="link-content" id="link">
+      <h1>Project Link</h1>
+      <div class="link">
+        <div class="webp">
+          <ul>
+            <li><a href="https://jgchcj.netlify.app">HCJdemo</a></li>
+            <li><a href="https://blogjk.netlify.app">Blog</a></li>
+            <li><a href="https://jaegweonnodejse.netlify.app/">Node.js</a></li>
+            <li>
+              <a href="https://webjk080200.netlify.app">Midterm Project</a>
+            </li>
+            <li>
+              <a href="https://informationsecuritywebs4.netlify.app"
+                >Midterm Team Project</a
+              >
+            </li>
+            <li>
+              <a href="https://webfinalexam.netlify.app">Final Project</a>
+            </li>
+            <li>
+              <a href="#">Final Team Project</a>
+            </li>
+          </ul>
+        </div>
+        <div class="club">
+          <ul>
+            <li>
+              <a href="https://webfinalexam.netlify.app">Final Project</a>
+            </li>
+            <li>
+              <a href="https://webfinalexam.netlify.app">Final Project</a>
+            </li>
+            <li>
+              <a href="https://webfinalexam.netlify.app">Final Project</a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
