--- a/index.html
+++ b/index.html
@@ -87,42 +87,7 @@
     </div>
     <div class="link-content" id="link">
       <h1>Project Link</h1>
-      <div class="link">
-        <div class="webp">
-          <ul>
-            <li><a href="https://jgchcj.netlify.app">HCJdemo</a></li>
-            <li><a href="https://blogjk.netlify.app">Blog</a></li>
-            <li><a href="https://jaegweonnodejse.netlify.app/">Node.js</a></li>
-            <li>
-              <a href="https://webjk080200.netlify.app">Midterm Project</a>
-            </li>
-            <li>
-              <a href="https://informationsecuritywebs4.netlify.app"
-                >Midterm Team Project</a
-              >
-            </li>
-            <li>
-              <a href="https://webfinalexam.netlify.app">Final Project</a>
-            </li>
-            <li>
-              <a href="#">Final Team Project</a>
-            </li>
-          </ul>
-        </div>
-        <div class="club">
-          <ul>
-            <li>
-              <a href="https://webfinalexam.netlify.app">Final Project</a>
-            </li>
-            <li>
-              <a href="https://webfinalexam.netlify.app">Final Project</a>
-            </li>
-            <li>
-              <a href="https://webfinalexam.netlify.app">Final Project</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+      <div class="link"></div>
     </div>
 
     <footer class="footer">
