--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#portpolio">Portpolio</a></li>
         <li><a href="#member">Member</a></li>
-        <li><a href="#link">Link</a></li>
+        <li><a href="#link">Other</a></li>
+        <li><a href="https://jaegweonnodejse.netlify.app/">Next.js</a></li>
       </ul>
     </nav>
     <div class="container">
@@ -64,7 +65,7 @@
           </a>
         </div>
         <div class="card">
-          <a href="https://web-programing-middle-project.vercel.app/">
+          <a href="https://final-project-lime-mu.vercel.app/">
             <div class="card-img">
               <img src="/img/minwook.png" />
             </div>
@@ -73,7 +74,7 @@
           </a>
         </div>
         <div class="card">
-          <a href="https://sbblog2024.netlify.app/">
+          <a href="https://js-web-team-sb.vercel.app/">
             <div class="card-img">
               <img
                 src="https://coolenjoy.net/data/editor/2303/90e1823d7613c5836447fd621d291ea4c8f9d8cb.jpeg"
@@ -87,7 +88,38 @@
     </div>
     <div class="link-content" id="link">
       <h1>Project Link</h1>
-      <div class="link"></div>
+      <div class="link">
+        <div class="link-top">
+          <ul>
+            <li>
+              <button
+                type="button"
+                onclick="showPDF('pdf/PHP, MySQL_천재권.pdf')"
+              >
+                PHP, MySql
+              </button>
+            </li>
+            <li>
+              <button type="button" onclick="showPDF('pdf/XSS.pdf')">
+                XSS
+              </button>
+            </li>
+            <li>
+              <button
+                type="button"
+                onclick="showPDF('pdf/command_injection.pdf')"
+              >
+                CMI
+              </button>
+            </li>
+          </ul>
+        </div>
+        <div class="pdf">
+          <embed src="pdf/PHP, MySQL_천재권.pdf" type="application/pdf" />
+          <embed src="pdf\XSS.pdf" type="application/pdf" />
+          <embed src="pdf\command_injection.pdf" type="application/pdf" />
+        </div>
+      </div>
     </div>
 
     <footer class="footer">
