--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
     </div>
     <div class="member-content" id="member">
       <h1>My Team</h1>
-      <button id="team_page">Team Page</button>
+      <a href="https://webfinalteamproject.netlify.app/"
+        ><button id="team_page">Team Page</button></a
+      >
       <div class="member_container">
         <div class="card">
-          <a href="https://webjk080200.netlify.app/">
+          <a href="https://webfinalexam.netlify.app/">
             <div class="card-img">
               <img src="/img/jaegweon.png" />
             </div>
@@ -56,7 +58,7 @@
           </a>
         </div>
         <div class="card">
-          <a href="https://jhblog2024.netlify.app/">
+          <a href="https://jhjsblog2024.netlify.app/">
             <div class="card-img">
               <img src="/img/jihoon.png" />
             </div>
